# rp2024_freertos_super

./: .gitattributes  .gitignore  .gitmodules  README.md
workplace/blink/: CMakeLists.txt  FreeRTOSConfig.h  Makefile  README.md  blink.c
